fix: z-index

--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -100,6 +100,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding-top: 8px;
+    z-index: 1;
 }
 
 /* icons area */
